Added date formatting and sort by date/time for repo/activities

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="activity-col">
       <div class="nav-tabs">
         <ul>
-          <li><a href="" class="active"><span class="octicon octicon-diff-added"></span> Contributions</a></li>
-          <li><a href=""><span class="octicon octicon-repo"></span> Repositories</a></li>
-          <li><a href=""><span class="octicon octicon-rss"></span> Public activity</a></li>
+          <li><a href=""><span class="octicon octicon-diff-added"></span> Contributions</a></li>
+          <li><a href="" class="repos-navbut"><span class="octicon octicon-repo"></span> Repositories</a></li>
+          <li><a href="" class="activity-navbut"><span class="octicon octicon-rss"></span> Public activity</a></li>
         </ul>
         <div class="right-nav-tabs">
           <a class="button" href="#"><span class="octicon octicon-pencil"></span> Edit profile</a>
@@ -54,6 +54,7 @@
 <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="assets/bower_components/underscore/underscore-min.js"></script>
 <!-- Templates -->
+<script src="assets/js/templatefuncs.js"></script>
 <script src="assets/js/templates.js"></script>
 <!--Main app script-->
 <script src="assets/js/test.js"></script>
