Added menu styling and added call to GitHub's API

--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
   <title>GH Profile Recreate</title>
 </head>
 <body>
+  <!--Nav-->
+    <nav>
+      <div class="container">
+      <ul class="left">
+        <li>
+          <a href="https://github.com/">
+            <span class="mega-octicon octicon-mark-github"></span>
+          </a>
+        </li>
+        <li>
+          <input type="text" placeholder="Search Github">
+        </li>
+        <li>
+          <a href="https://github.com/explore">Explore</a>
+        </li>
+        <li>
+          <a href="https://gist.github.com/">Gist</a>
+        </li>
+        <li>
+          <a href="https://github.com/blog">Blog</a>
+        </li>
+        <li>
+          <a href="https://help.github.com/">Help</a>
+        </li>
+      </ul>
+      <ul class="right">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+  </nav>
+  <!---End nav-->
+
   <div class="container">
     <!--LEFT SIDE OF GH PROFILE-->
     <div class="vcard-col">
